# clean-code-python

./: .editorconfig  Makefile  README.md  pyproject.toml
budwing/: main.py
budwing/clean/concurrency/: dead_lock.py  race_condition.py  starvation.py
budwing/clean/concurrency/pattern/: active_counter.py  active_object.py  balking.py  double_checked_locking.py  guarded_suspension.py  monitor_object.py  process_pool.py  producer_consumer.py  producer_consumer_coroutine.py  producer_consumer_processor.py  thread_pool.py
budwing/clean/exception/: __init__.py  exception_client.py  exception_service.py
budwing/clean/function/: side_effect.py  small_function.py
budwing/clean/naming/: avoid_disinformation.py  avoid_encoding.py  intention_revealing.py  meaningful_context.py  meaningful_distinction.py  pronounceable.py  searchable.py
budwing/messy/concurrency/: dead_lock.py  race_condition.py  starvation.py
budwing/messy/concurrency/root/: coroutine.py  gil.py
budwing/messy/exception/: __init__.py  error_code.py  exception_client.py  exception_service.py
budwing/messy/function/: side_effect.py  small_function.py
budwing/messy/naming/: avoid_disinformation.py  avoid_encoding.py  intention_revealing.py  meaningful_context.py  meaningful_distinction.py  pronounceable.py  searchable.py
tests/: test_intention_revealing_clean.py
