[tool.poetry]
name = "clean-code-python"
version = "0.1.0"
description = "clean code for python"
readme = "README.md"
authors = ["Xuesong Tian <weatry@example.com>"]
packages = [ { include = "budwing" } ]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
black = "^24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
